<resources>
    <string name="app_name">PestBotController</string>
    <string name="title_activity_controller">controller</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_mac_address">Enter MAC Address</string>
    <string name="enter">Enter</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="sleft">sLeft</string>
    <string name="sright">sRight</string>
    <string name="right">Right</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="reconnect">Reconnect</string>
    <string name="title_activity_control">Control</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">map</string>
    <string name="satellite_view">Satellite View</string>
    <string name="pump_1">Pump 1</string>
    <string name="pump_2">Pump 2</string>
    <string name="pestrobo">pestRobo</string>
    <string name="capture">Capture</string>
</resources>